--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -5,6 +5,7 @@
           android:orderInCategory="5"
           android:title="Search"
           android:icon="@android:drawable/ic_menu_search"
-          app:showAsAction="always|collapseActionView"
-          app:actionViewClass="android.support.v7.widget.SearchView" />
+          app:showAsAction="always"
+          app:actionViewClass="android.widget.SearchView" />
+
 </menu>
